<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinaFly</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="attempts">Attempts Left:</string>
    <string name="your_name">Name</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone #</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="visible">Visible</string>
    <string name="discoverable">On</string>
    <string name="create_profile">Create Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="title_activity_main_map_fragment">MainMapFragment</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_fragment_tab1">fragmentTab1</string>
    <string name="title_activity_my_tab_listener">MyTabListener</string>
    <string name="title_activity_fragment_tab2">FragmentTab2</string>
    <string name="title_activity_fragment_tab3">FragmentTab3</string>
    <string name="one">One</string>
    <string name="action_search">Search</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_image_pick_avtivity">ImagePickAvtivity</string>
    <string name="Capture">Capture</string>
    <string name="tap">Tap Me</string>
    <string name="camera">camera</string>
    <string name="title_activity_ranging">RangingActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_beacon">Beacon</string>
    <string name="title_activity_notify_demo">NotifyDemoActivity</string>
    <string name="title_activity_distance_background_view">DistanceBackgroundView</string>
    <string name="title_activity_distance_beacon">DistanceBeaconActivity</string>
    <string name="title_activity_all_demos">AllDemosActivity</string>
    <string name="notify">Notify</string>
    <string name="change_beacon_minor">Change Beacon\'s Minor</string>
    <string name="distance">Distance</string>
    <string name="activities">Activities</string>
    <string name="tap_to_pin">Tap to Start Pinning!</string>
    <string name="first_beacon">First iBeacon</string>
    <string name="proximity_uuid">Proximity UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="rssi">Rssi</string>
    <string name="second_beacon">Second iBeacon</string>
    <string name="extract_a_point">Take a point</string>
    <string name="insert">Insert</string>
    <string name="retrieve">Retrieve</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="title_activity_db">DBActivity</string>
    <string name="title_activity_dbhelper">DBHelper</string>
    <string name="title_activity_dbinsert">DBinsert</string>
    <string name="image">Image</string>
    <string name="monitor1">First_iBeacon</string>
    <string name="monitor2">Proximity_UUID"</string>
    <string name="monitor3">Major</string>
    <string name="monitor4">Minor</string>
    <string name="monitor5">Rssi</string>
    <string name="monitor6">Second_iBeacon</string>


</resources>
