
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@drawable/background"
tools:context=".BluetoothActivity"    >

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="#359c5e"
        android:onClick="camera"
        android:text="@string/camera"
        android:textColor="#ffffff"
        android:layout_marginTop="4dp"/>


    <Button

        android:id="@+id/listBeacon"
        android:layout_height="50dp"
        android:layout_width="90dp"
        android:layout_marginLeft="190dp"
        android:onClick="AllDemos"
        android:text="listBeacon"
        android:background="#359c5e"
        android:textColor="#ffffff"/>

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="45dp"
    android:text="@string/login"
    android:textStyle="bold"
    android:textSize="30sp"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/textView1"
    android:layout_marginTop="50dp"
    android:text="@string/username"
    android:textStyle="bold"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText
    android:id="@+id/editText1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView2"
    android:layout_marginLeft="32dp"
    android:layout_toRightOf="@+id/textView2"
    android:ems="10"
    android:inputType="textNoSuggestions">

    <requestFocus />
</EditText>

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView2"
    android:textStyle="bold"
    android:layout_below="@+id/textView2"
    android:layout_marginTop="38dp"
    android:text="@string/password"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView3"
    android:layout_alignLeft="@+id/editText1"
    android:ems="10"
    android:inputType="textPassword"
    />

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="login"
    android:text="@string/Login"
    android:layout_toEndOf="@+id/textView5"
    android:textStyle="bold"
    style="@style/btnStyleSandrift"
    android:layout_marginTop="52dp"
    android:layout_below="@+id/textView4"
    android:layout_alignRight="@+id/editText2"
    android:layout_alignEnd="@+id/editText2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bluetooth"
        android:text="@string/bluetooth"
        android:textStyle="bold"
        style="@style/btnStyleSandrift"
        android:layout_toStartOf="@+id/editText2"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="map"
        android:text="@string/map"
        android:textStyle="bold"
        style="@style/btnStyleSandrift"
        android:layout_toStartOf="@+id/editText2"
        android:layout_alignTop="@+id/button6"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1" />



    <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/textView3"
    android:layout_below="@+id/textView3"
    android:textStyle="bold"
    android:layout_marginStart="30dp"
    android:layout_marginTop="48dp"
    android:text="@string/attempts"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@+id/textView1"
    android:layout_alignTop="@+id/textView4"

    android:text="__" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/button2"
        android:onClick="register"
        style="@style/btnStyleSandrift"
        android:layout_alignTop="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />


</RelativeLayout>