<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:content=".Ranging">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor1"
        android:textAppearance=
            "?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor2" />

    <EditText
        android:id="@+id/txtUUID1"
        android:labelFor="@+id/txtUUID1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor3" />

    <EditText
        android:id="@+id/txtMajor1"
        android:labelFor="@+id/txtMajor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor4" />

    <EditText
        android:id="@+id/txtMinor1"
        android:labelFor="@+id/txtMinor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor5" />

    <EditText
        android:id="@+id/txtRssi1"
        android:labelFor="@+id/txtRssi1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor6"
        android:textAppearance=
            "?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor2" />

    <EditText
        android:id="@+id/txtUUID2"
        android:labelFor="@+id/txtUUID2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor3" />

    <EditText
        android:id="@+id/txtMajor2"
        android:labelFor="@+id/txtMajor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor4" />

    <EditText
        android:id="@+id/txtMinor2"
        android:labelFor="@+id/txtMinor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monitor5" />

    <EditText
        android:id="@+id/txtRssi2"
        android:labelFor="@+id/txtRssi2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="text">
    </EditText>

</LinearLayout>