<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/distance_demo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        style="@style/btnStyleSandrift"
        android:paddingBottom="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="27dp" />

    <Button
        android:id="@+id/notify_demo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify"
        style="@style/btnStyleSandrift"
        android:paddingBottom="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="7dp" />

    <Button
        android:id="@+id/characteristics_demo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_beacon_minor"
        style="@style/btnStyleSandrift"
        android:paddingBottom="7dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="7dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="70dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingTop="70dp"
        android:src="@drawable/beacon_gray" />

</LinearLayout>