<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".BluetoothActivity"
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bluetooth"
        android:id="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        android:id="@+id/button3"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="on"
        style="@style/btnStyleSandrift">

        </Button>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:id="@+id/button4"
        android:layout_marginTop="107dp"
        android:layout_marginLeft="130dp"
        android:onClick="off"
        style="@style/btnStyleSandrift"
         />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visible"
        android:id="@+id/button5"
        android:onClick="visible"
        style="@style/btnStyleSandrift"
        android:layout_toEndOf="@+id/textView"
        android:layout_above="@+id/listView1"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />



    <ListView
        android:id="@+id/listView1"
        android:layout_width="400dp"
        android:layout_height="340dp"
        android:visibility="visible"
        android:layout_below="@+id/button3"
        />

</RelativeLayout>