<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:content=".Activity2">

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="camera"
        android:text="@string/camera"
        style="@style/btnStyleSandrift"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"/>


    <Button

        android:id="@+id/listBeacon"
        android:layout_height="75dp"
        android:layout_width="210dp"
        android:layout_centerHorizontal="true"
        android:onClick="AllDemos"
        android:text="Locate Beacons"
        style="@style/btnStyleSandrift"
        android:layout_marginTop="290dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/activities"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="map"
        android:text="@string/map"
        android:textStyle="bold"
        style="@style/btnStyleSandrift"
        android:layout_marginTop="430dp"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>